color tweaks in docs

--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -12,8 +12,8 @@ $colorGray: #44475a;
 $colorDarkGray: #26204A;
 
 $colorPink: #FF79C6;
-$colorPurple: #bd93f9;
-$colorCyan: #64D9EF;
+$colorPurple: #E06CFC;
+$colorCyan: #68C7ED;
 $colorBlue: #6272a4;
 $colorYellow: #E7DC64;
 $colorGreen: #50fa7b;
@@ -23,12 +23,12 @@ $colorRed: #ff5555;
 // Variables in use
 $colorOne: $colorYellow;
 $colorTwo: $colorPurple;
-$colorThree: $colorRed;
+$colorThree: $colorCyan;
 $colorFour: $colorGreen;
 $colorFive: $colorBlue;
-$colorSix: $colorCyan;
+$colorSix: $colorPurple;
 $colorSeven: $colorOrange;
-$colorEight: $colorPink;
+$colorEight: $colorYellow;
 
 $colorText: $colorLightGray;
 $colorBackground: $colorDarkGray;
