--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -11,7 +11,7 @@ $colorLightGray: #f8f8f2;
 $colorGray: #44475a;
 $colorDarkGray: #26204A;
 
-$colorPink: #FF79C6;
+$colorPink: #9d67ff;
 $colorPurple: #E06CFC;
 $colorCyan: #68C7ED;
 $colorBlue: #6272a4;
@@ -21,7 +21,7 @@ $colorOrange: #ffb86c;
 $colorRed: #ff5555;
 
 // Variables in use
-$colorOne: $colorYellow;
+$colorOne: $colorPink;
 $colorTwo: $colorPurple;
 $colorThree: $colorCyan;
 $colorFour: $colorGreen;
