--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -202,6 +202,12 @@ $iconLinecap: square;
   }
 }
 
+// Front matter dependent
+header {
+  background-image: url('{{ site.github.url }}/assets/header-bg.svg');
+}
+
+
 // Imports ===================================================================
 
 @import "header";
