--- a/docs/_sass/_syntax.scss
+++ b/docs/_sass/_syntax.scss
@@ -56,6 +56,7 @@ code.highlighter-rouge {
 @include code-language('shell');
 @include code-language('liquid');
 @include code-language('javascript');
+@include code-language('plaintext');
 @include code-language('yaml');
 @include code-language('css');
 @include code-language('scss');
@@ -69,7 +70,7 @@ code.highlighter-rouge {
   font-weight: 800;
   color: $colorLightGray;
   padding: $gutter 0;
-  overflow: scroll;
+  overflow: auto;
 
   .hll,
   .s,
