--- a/src/scripts/app.js.liquid
+++ b/src/scripts/app.js.liquid
@@ -36,6 +36,7 @@ concrete.strings = {
 
 // Initialize on document ready
 $(document).ready(function() {
+  // Register sections js
   var sections = new concrete.Sections();
   sections.register('product', concrete.Product);
 })
