--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -34,3 +34,4 @@
 @import url('modules/popups.scss');
 @import url('modules/social.scss');
 @import url('modules/icon.scss');
+@import url('modules/product.scss');
