--- a/src/scripts/app.js.liquid
+++ b/src/scripts/app.js.liquid
@@ -23,12 +23,16 @@ concrete.strings = {
   unavailable: "{{ 'product.unavailable' | t }}"
 };
 
+concrete.urlParams = {};
+
 /*================ Concrete ================*/
 // =require concrete/cache.js
-// =require concrete/url-params.js
+// =require concrete/utils.js
+// =require concrete/a11y.js
 // =require concrete/currency.js
 // =require concrete/sections.js
 // =require concrete/images.js
+// =require concrete/collection.js
 // =require concrete/variants.js
 // =require concrete/product.js
 // =require concrete/empty-section.js
@@ -39,4 +43,5 @@ $(document).ready(function() {
   // Register sections js
   var sections = new concrete.Sections();
   sections.register('product', concrete.Product);
+  sections.register('collection', concrete.Collection);
 })
