--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -28,6 +28,7 @@
 
 /* Modules ==================================================================*/
 @import url('modules/header.scss');
+@import url('modules/navigation.scss');
 @import url('modules/footer.scss');
 @import url('modules/cart.scss');
 @import url('modules/drawer.scss');
