Removed popup link styles added more helpers

--- a/docs/_sass/_additions.scss
+++ b/docs/_sass/_additions.scss
@@ -105,6 +105,7 @@ aside.sidebar {
   div.fixed {
     position: fixed;
     top: $gutter;
+    height: 100%;
   }
   ul.childlinks {
     margin-bottom: 0px;
