--- a/src/styles/global/helpers.scss
+++ b/src/styles/global/helpers.scss
@@ -66,3 +66,32 @@
 .clearfix {
   @include clearfix();
 }
+
+.no-margin {
+  margin-top: 0;
+  margin-bottom: 0 !important;
+}
+.margin-top {
+  margin-top: $gutter;
+}
+.margin-bottom {
+  margin-bottom: $gutter;
+}
+.padding-top {
+  padding-top: $gutter;
+}
+.padding-bottom {
+  padding-bottom: $gutter;
+}
+.no-select {
+  @include prefixer(user-select, none, webkit moz ms spec);
+}
+.v-middle {
+  vertical-align: middle;
+}
+.v-top {
+  vertical-align: top;
+}
+.v-bottom {
+  vertical-align: bottom;
+}
