--- a/src/styles/global/helpers.scss
+++ b/src/styles/global/helpers.scss
@@ -1,4 +1,4 @@
-// Position Helpers
+// Alignment Helpers
 .left {
   text-align: left;
 }
@@ -12,6 +12,20 @@
 }
 .wide {
   width: 100%;
+}
+
+.vertical-align {
+  @include vertical-align();
+}
+
+.v-middle {
+  vertical-align: middle;
+}
+.v-top {
+  vertical-align: top;
+}
+.v-bottom {
+  vertical-align: bottom;
 }
 
 // Visibility helpers
@@ -50,12 +64,15 @@
   display: none;
 }
 
+// Colour helpers
+
 .highlight {
   color: $colorHighlight;
 }
 .alternate {
   color: $colorAlternate;
 }
+
 .inline {
   list-style: none;
   display: inline-block;
@@ -66,7 +83,14 @@
 .clearfix {
   @include clearfix();
 }
+.no-select {
+  @include prefixer(user-select, none, webkit moz ms spec);
+}
+.overlay {
+  @include overlay();
+}
 
+// Margin and padding helpers
 .no-margin {
   margin-top: 0;
   margin-bottom: 0 !important;
@@ -82,16 +106,4 @@
 }
 .padding-bottom {
   padding-bottom: $gutter;
-}
-.no-select {
-  @include prefixer(user-select, none, webkit moz ms spec);
-}
-.v-middle {
-  vertical-align: middle;
-}
-.v-top {
-  vertical-align: top;
-}
-.v-bottom {
-  vertical-align: bottom;
 }
