--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -29,4 +29,5 @@
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script src="{{ site.github.url }}/assets/js/scroll-spy.js"></script>
 </head>
-<body data-spy="scroll" data-target="#navbar-example">
+<body data-spy="scroll" data-target="#navbar-example" class="parallax" data-perspective="35">
+  <div class="body-wrapper parallax" data-perspective="30">
