docs - color tweaks

--- a/docs/_sass/_additions.scss
+++ b/docs/_sass/_additions.scss
@@ -1,6 +1,6 @@
-.parallax {
-  transition: background-position-y 0.5s ease-out;
-}
+// .parallax {
+//   transition: background-position-y 0.5s ease-out;
+// }
 
 header {
   position: relative;
