--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -11,14 +11,14 @@ $colorLightGray: #f8f8f2;
 $colorGray: #44475a;
 $colorDarkGray: #21212a;
 
-$colorPink: #9d67ff;
-$colorPurple: #E06CFC;
+$colorPink: #b08cff;
+$colorPurple: #854AA0;
 $colorCyan: #68C7ED;
 $colorBlue: #6272a4;
 $colorYellow: #E7DC64;
-$colorGreen: #50fa7b;
+$colorGreen: #5FE1C2;
 $colorOrange: #ffb86c;
-$colorRed: #ff5555;
+$colorRed: #F2608A;
 
 // Variables in use
 $colorOne: $colorPink;
