--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -26,7 +26,7 @@ $colorTwo: $colorPurple;
 $colorThree: $colorCyan;
 $colorFour: $colorGreen;
 $colorFive: $colorBlue;
-$colorSix: $colorPurple;
+$colorSix: $colorRed;
 $colorSeven: $colorOrange;
 $colorEight: $colorYellow;
 
