View change example
 - with non js fallback

--- a/src/templates/collection.48.liquid
+++ b/src/templates/collection.48.liquid
@@ -1,7 +1,7 @@
-<!-- /templates/collection.liquid -->
+<!-- /templates/collection.48.liquid -->
 
-{% assign view = '12' %}
-{% paginate collection.products by 12 %}
+{% assign view = '48' %}
+{% paginate collection.products by 48 %}
 
 {% assign column_width = 'column l4 m6 s12' %}
 
