--- a/src/styles/modules/navigation.scss
+++ b/src/styles/modules/navigation.scss
@@ -60,4 +60,15 @@
     color: lighten($colorBrand, 25%);
     background-color: $colorBrand;
   }
+  .deco {
+    display: inline-block;
+    min-width: $gutter;
+    height: $gutter;
+    text-align: center;
+    line-height: ($gutter - $borderWeight*2);
+    text-decoration: none;
+    font-size: 1.125rem;
+    color: $colorBrand;
+    padding: 0 $gutter/4;
+  }
 }
