Auto focus password field

--- a/src/sections/password-footer.liquid
+++ b/src/sections/password-footer.liquid
@@ -24,7 +24,7 @@
         {% form 'storefront_password' %}
           {{ form.errors | default_errors }}
           <label for="password" class="hidden">{{ 'password_page.login_form_password_label' | t }}</label>
-          <input type="password" name="password" id="Password" placeholder="{{ 'password_page.login_form_password_placeholder' | t }}">
+          <input type="password" name="password" id="Password" placeholder="{{ 'password_page.login_form_password_placeholder' | t }}" data-auto-focus>
           <button type="submit" name="commit">
             {{ 'password_page.login_form_submit' | t }}
           </button>
