Password recover form fix

--- a/src/styles/global/forms.scss
+++ b/src/styles/global/forms.scss
@@ -7,7 +7,7 @@ form#AddToCartForm,
 .edit_address form,
 form#customer_login,
 form#create_customer,
-#RecoverPasswordForm form,
+#PasswordRecoverForm form,
 #PasswordResetForm form,
 form#address_form_new {
   input[type="text"],
