Social styling fix

--- a/src/styles/modules/social.scss
+++ b/src/styles/modules/social.scss
@@ -1,7 +1,5 @@
+/* Social ====================================================================*/
 
-.social-sharing {
-  margin-bottom: $gutter;
-}
 .button.share {
   padding: 0 $gutter/4;
   height: $gutter/1.5;
