--- a/src/styles/global/grid.scss
+++ b/src/styles/global/grid.scss
@@ -4,7 +4,8 @@
   max-width: 100%;
   width: 100%;
   margin: auto;
-  padding: 0 $gutter;
+  padding-left: $gutter;
+  padding-right: $gutter;
   &.xl {
     width: $xl;
   }
@@ -18,20 +19,23 @@
     width: $s;
   }
   @include s() {
-    padding: 0 $gutter/2;
+    padding-left: $gutter/2;
+    padding-right: $gutter/2;
   }
 }
 
 // Rows
-
 .row {
-  margin: 0 (-$gutter/2) $gutter;
+  margin-left: -($gutter/2);
+  margin-right: -($gutter/2);
+
   // Table Grid
   &.table { @include table(); }
   &.xl-table { @include xl() { @include table(); } }
   &.l-table { @include l() { @include table(); } }
   &.m-table { @include m() { @include table(); } }
   &.s-table { @include s() { @include table(); } }
+
   // Standard Grid
   &:after {
     content: "";
@@ -39,9 +43,11 @@
     clear: both;
   }
   &.collapse {
-    margin: 0;
+    margin-left: 0;
+    margin-right: 0;
     .column {
-      padding: 0;
+      padding-left: 0;
+      padding-right: 0;
     }
   }
 }
@@ -51,7 +57,8 @@
 .column {
   float: left;
   min-height: 0.125rem;
-  padding: 0 $gutter/2;
+  padding-left: $gutter/2;
+  padding-right: $gutter/2;
   &.l1 { width: percentage(1/12); }
   &.l2 { width: percentage(2/12); }
   &.l3 { width: percentage(3/12); }
@@ -114,7 +121,6 @@
 }
 
 // Flex Grid
-
 .flex {
   @include flex();
   @include box-orient--vertical();
@@ -123,7 +129,8 @@
     @include flex();
     @include flex-direction(row);
     .box {
-      margin: 0 $gutter/2 $gutter;
+      margin-left: $gutter/2;
+      margin-right: $gutter/2;
       flex: auto;
       align-self: center;
       &:first-child {
@@ -141,7 +148,8 @@
       @include flex-direction(column);
       .box {
         width: 100%;
-        margin: 0 0 $gutter;
+        margin-left: 0;
+        margin-right: 0;
       }
     }
   }
