--- a/src/styles/modules/icon.scss
+++ b/src/styles/modules/icon.scss
@@ -1,6 +1,6 @@
 /* SVG Icons =================================================================*/
 
-// Don't forget to comrpress your icons! https://jakearchibald.github.io/svgomg/
+// Don't forget to compress your icons! https://jakearchibald.github.io/svgomg/
 // All icons must be created at 32px by 32px regardless of size to be scaled to
 
 .icon {
