--- a/src/styles/global/global.scss
+++ b/src/styles/global/global.scss
@@ -2,7 +2,7 @@
 
 html {
   height: 100%;
-  font: 16px/21px sans-serif;
+  font: 16px/21px $fontFamily;
 }
 
 body {
@@ -21,7 +21,7 @@ img {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   display: block;
-  font-family: sans-serif;
+  font-family: inherit;
   font-weight: $fontBold;
   line-height: $lineHeight;
   margin-bottom: $lineMargin;
