--- a/src/styles/settings/variables.scss.liquid
+++ b/src/styles/settings/variables.scss.liquid
@@ -21,6 +21,7 @@ $borderStyle: solid;
 $fontLight: 300;
 $fontNormal: 400;
 $fontBold: 700;
+$fontFamily: sans-serif;
 $lineHeight: 1.5;
 $lineMargin: $spacing*2;
 
